--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ authors = [
 maintainers = [
   { name="Vit Melnychuk", email="playersoft1999@gmail.com" },
 ]
-description = "A small example package"
+description = "A Python package for analyzing Formula 1 racing data and generating reports."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -17,5 +17,5 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/AlexanderVVasilenko/report-of-monaco-2018-racing/"
+Issues = "https://github.com/AlexanderVVasilenko/report-of-monaco-2018-racing/issues"
